tests/error/move_across_for_loop_boundary.bz
function test()
{
	let i = 0;
	for (;;)
	{
		move i;
	}
}
